<resources>
    <string name="app_name">Job Depot</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="linkedInSignIn">Sign in With LinkedIn</string>
    <string name="signin">Sign In</string>
    <string name="signup">New User?Sign Up Right Now!</string>
    <string name="edit_message">Edit Message</string>
    <string name="button">Button</string>
    <string name="title_activity_display_message"></string>

    <string name="title_activity_candidate_home">Job Depot</string>
    <string name="title_activity_job_depot">Job Depot</string>
    <string name="title_activity_employer_login">Employer Login</string>
    <string name="title_activity_employer_sign_up">Employer Sign Up</string>



    <string name="title_section1">Jobs</string>
    <string name="title_section2">Resume</string>
    <string name="title_section3">Saved Jobs</string>
    <string name="title_section4">Settings</string>

    <string name="Employer_section1">Post Jobs</string>
    <string name="Employer_section2">History</string>
    <string name="Employer_section3">Candidates</string>
    <string name="Employer_section4">Settings</string>

    <string name="education">Education</string>
    <string name="exp">Work Experience</string>
    <string name="skills">Skills</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply!</string>
    <string name="title_activity_post_job">PostJob</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_job_information">JobInformation</string>
    <string name="google_map_key">AIzaSyDO3lUIhH3qQcT9jvaWBcmGLcTxsq1_Vj0</string>
    <string name="title_activity_applied_candidate_list">AppliedCandidateList</string>
    <string name="logout">LogOut</string>
</resources>
