<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ankit.job_depot.employer.view.EmployerLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Job Depot"
        android:id="@+id/textView13"
        android:textColor="#0000FF"
        android:textSize="@dimen/abc_action_bar_stacked_max_height"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/textBoxEmployerName"
        android:hint="@string/username"
        android:gravity="center"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:password="true"
        android:gravity="center"
        android:id="@+id/textBoxPassword"
        android:layout_above="@+id/buttonEmployerSignUp"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/buttonEmployerSignUp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpLink"
        android:text="@string/signup"
        android:layout_gravity="center_horizontal"
        android:paddingTop="25dp"
        android:textColor="@color/accent_material_light"
        android:layout_below="@+id/buttonEmployerSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

</RelativeLayout>
